--- a/.github/workflows/release-build.yml
+++ b/.github/workflows/release-build.yml
@@ -2,7 +2,7 @@ name: Release Build
 
 on:
   push:
-    tags: [ "0.**", "1.**", "2.**" ]
+    tags: [ '[0-9]+.[0-9]+.[0-9]+' ]
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
