--- a/.github/workflows/dev-build.yml
+++ b/.github/workflows/dev-build.yml
@@ -10,7 +10,7 @@ on:
   workflow_dispatch:
 
 env:
-  addonName: AddonTemplate
+  addonName: AddonSuite
   curseForgeProjectId: 782096
   releaseDir: ./.release
 
