--- a/.github/workflows/release-build.yml
+++ b/.github/workflows/release-build.yml
@@ -8,7 +8,7 @@ on:
   workflow_dispatch:
 
 env:
-  addonName: AddonTemplate
+  addonName: AddonSuite
   curseForgeProjectId: 782096
   uploadBuildArtifacts: true
   createDraftRelease: true
