--- a/dev/pkgmeta-dev.yaml
+++ b/dev/pkgmeta-dev.yaml
@@ -31,9 +31,8 @@ externals:
   Core/ExtLib/WowAce/Ace3:
     url: https://repos.wowace.com/wow/ace3/trunk
     tag: latest
-  Core/ExtLib/WowAce/LibQTip/LibQTip-1.0:
-    # https://www.wowace.com/projects/libqtip-1-0
-    url: https://repos.wowace.com/wow/libqtip-1-0
+  Core/ExtLib/WowAce/LibDBIcon/LibDBIcon-1.0:
+    url: https://repos.wowace.com/wow/libdbicon-1-0/trunk
     tag: latest
 
 ignore:
@@ -44,12 +43,12 @@ ignore:
   - dev
   - doc
   - scripts
-  - Core/SavedDungeonsAndRaids.lua
+  - Core/AddonSuite.lua
   - Core/_Core.lua
   - Core/_Core.xml
   - Core/_ExtLib.xml
-  - Core/_ExtLib_WowAce.xml
-  - Core/AddonLib
+  - Core/_ExtLib_WowAce_Ace3.xml
+  - Core/_ExtLib_WowAce_LibDataBroker.xml
   - Core/Assets
   - Core/Global
   - Core/Interface
@@ -74,12 +73,13 @@ ignore:
   - Core/ExtLib/WowAce/Ace3/Ace3_Wrath.toc
   - Core/ExtLib/WowAce/Ace3/Bindings.xml
   - Core/ExtLib/WowAce/Ace3/Bindings.xml
+  - Core/ExtLib/WowAce/LibDBIcon/LibDBIcon-1.0/LibDBIcon-1.0/lib.xml
+  - Core/ExtLib/WowAce/LibDBIcon/LibDBIcon-1.0/LibStub
+  - Core/ExtLib/WowAce/LibDBIcon/LibDBIcon-1.0/CallbackHandler-1.0
+  - Core/ExtLib/WowAce/LibDBIcon/LibDBIcon-1.0/embeds.xml
   - "*.toc"
-
-## Potentially helpful libraries
-## - https://www.wowace.com/projects/libactionbutton-1-0
 
 move-folders:
   Dev/Core/ExtLib/Kapresoft-LibUtil: ../Core/ExtLib/Kapresoft-LibUtil
   Dev/Core/ExtLib/WowAce/Ace3: ../Core/ExtLib/WowAce/Ace3
-  Dev/Core/ExtLib/WowAce/LibQTip/LibQTip-1.0: ../Core/ExtLib/WowAce/LibQTip/LibQTip-1.0
+  Dev/Core/ExtLib/WowAce/LibDBIcon/LibDBIcon-1.0: ../Core/ExtLib/WowAce/LibDBIcon
