--- a/pkgmeta.yaml
+++ b/pkgmeta.yaml
@@ -61,5 +61,8 @@ ignore:
   - Core/ExtLib/WowAce/Ace3/Ace3_Vanilla.toc
   - Core/ExtLib/WowAce/Ace3/Ace3_Wrath.toc
   - Core/ExtLib/WowAce/Ace3/Bindings.xml
-  - Core/ExtLib/WowAce/Ace3/Bindings.xml
+  - Core/ExtLib/WowAce/LibDBIcon/LibDBIcon-1.0/LibDBIcon-1.0/lib.xml
+  - Core/ExtLib/WowAce/LibDBIcon/LibDBIcon-1.0/LibStub
+  - Core/ExtLib/WowAce/LibDBIcon/LibDBIcon-1.0/CallbackHandler-1.0
+  - Core/ExtLib/WowAce/LibDBIcon/LibDBIcon-1.0/embeds.xml
   - Dev.toc
