Resolves #2: Feature Request: Minimap icon with profile selection drop down

--- a/dev/pkgmeta-dev.yaml
+++ b/dev/pkgmeta-dev.yaml
@@ -72,7 +72,6 @@ ignore:
   - Core/ExtLib/WowAce/Ace3/Ace3_Vanilla.toc
   - Core/ExtLib/WowAce/Ace3/Ace3_Wrath.toc
   - Core/ExtLib/WowAce/Ace3/Bindings.xml
-  - Core/ExtLib/WowAce/Ace3/Bindings.xml
   - Core/ExtLib/WowAce/LibDBIcon/LibDBIcon-1.0/LibDBIcon-1.0/lib.xml
   - Core/ExtLib/WowAce/LibDBIcon/LibDBIcon-1.0/LibStub
   - Core/ExtLib/WowAce/LibDBIcon/LibDBIcon-1.0/CallbackHandler-1.0
@@ -82,4 +81,4 @@ ignore:
 move-folders:
   Dev/Core/ExtLib/Kapresoft-LibUtil: ../Core/ExtLib/Kapresoft-LibUtil
   Dev/Core/ExtLib/WowAce/Ace3: ../Core/ExtLib/WowAce/Ace3
-  Dev/Core/ExtLib/WowAce/LibDBIcon/LibDBIcon-1.0: ../Core/ExtLib/WowAce/LibDBIcon
+  Dev/Core/ExtLib/WowAce/LibDBIcon: ../Core/ExtLib/WowAce/LibDBIcon
