Resolves #37: Right-Click on minimap icon disables tooltip Resolves #35: Disable Logging on Non-Dev Builds

--- a/pkgmeta.yaml
+++ b/pkgmeta.yaml
@@ -68,4 +68,5 @@ ignore:
   - Core/ExtLib/WowAce/LibDBIcon/LibDBIcon-1.0/LibStub
   - Core/ExtLib/WowAce/LibDBIcon/LibDBIcon-1.0/CallbackHandler-1.0
   - Core/ExtLib/WowAce/LibDBIcon/LibDBIcon-1.0/embeds.xml
+  - Core/Lib/Developer
   - Dev.toc
