Resolves #47: Support for Cata Classic Developer config for DebugChatFrame integration toc refactors.

--- a/dev/pkgmeta-dev.yaml
+++ b/dev/pkgmeta-dev.yaml
@@ -44,6 +44,10 @@ ignore:
   - doc
   - scripts
   - Core/AddonSuite.lua
+  - Core/Retail.lua
+  - Core/Vanilla.lua
+  - Core/Wrath.lua
+  - Core/Cata.lua
   - Core/_Core.lua
   - Core/_Core.xml
   - Core/_ExtLib.xml
